add action and focus intro work

--- a/Action.tex
+++ b/Action.tex
@@ -1,4 +1,5 @@
 \input{ActionIntro.tex}
+
 \smallQuote{BD_ACT}{Action may not always bring happiness, but without action there is none}{Benjamin Disraelli}{}
 
 \smallQuote{MA_NOW1}{Each of us lives only now in this brief instant. The rest has been lived already or is impossible to see}{Marcus Aurelius}{}
@@ -8,13 +9,12 @@ And don't go expecting Plato's "Republic" either, just be satisfied with even th
 
 \clearpage
 \HugeQuote{MG_AEP}{Action expresses priority}{}{Mahatma Ghandi}{}{}
-
 \cleardoublepage
 
 \hugeQuote{LT_FAT}{Fac aut tace}{}{}{}{Do or be silent}
 \hugeQuote{FB_CWA}{Code wins}{}{}{}{}
 \hugeQuote{RG_DDX}{Demonstrate}{ don't explicate}{Robert Greene}{}{}
-
+\cleardoublepage
 \hugeQuote{AR_HABIT}{Quality is not an act.}{ It is a habit.}{Aristotle}{}{}
 \hugeQuote{RH_HABIT}{How you do anything is how you do everything}{}{Ryan Holiday}{}{}
 \hugeQuote{MLK_HABIT}{If I cannot do great things}{ I can do small things in a great way}{Martin Luther King Jr.}{}{}
