--- a/FocusIntro.tex
+++ b/FocusIntro.tex
@@ -1,3 +1,10 @@
 \cleardoublepage
 
+As hard as it can be to take action, it can be even harder to maintain the level of focus we need to on the right things. We're too polite putting ourselves to one side to avoid offending people (cf. \ref{PL_DST} and \ref{GVG_ALONE}), we make great gains on Twitter and Facebook while ignoring our Amazing Book Idea (cf. \ref{MA_SMALL}) and spend hours mindlessly scrolling around crappy journalism when we could be reading an immersive classic (cf. \ref{TP_BOOK}) or working on our supposedly beloved hobby (cf. \ref{BB_PRACTICE}).
+
+Epictetus reminds us that we need to gut things which take us away from the serious and important business of improvement from our lives. We can be sure that nothing truly terrible will happen if we stop using social media and watching 24 hour rolling news with repeats every 25 minutes or so. We can be supremely confident that life will carry on if we leave the "mind numbing spirit crushing game shows\footnote{Renton, Trainspotting}" to someone else.
+Maybe we should call someone who's important to us and focus soley on that for starters. 
+
+Go ahead, the advice and guidance on the next few pages will still be here.
+
 \clearpage
