--- a/Resilience.tex
+++ b/Resilience.tex
@@ -98,7 +98,7 @@ you have entrusted your happiness to others.}{Marcus Aurelius}{}{}
 \smallQuote{CF_SUCCESS}{Success depends on previous preparation, and without such preparation there can be no success}{Confucius}{}
 
 
-\smallQuote{PPPPPP}{Proper planning prevents piss poor performance}{}{}{the five Ps}
+\smallQuote{PPPPP}{Proper planning prevents piss poor performance}{}{CF_SUCCESS}
 
 \hugeQuote{OS_OPTIMISM}{Optimism is cowardice}{}{Oswald Spengler}{}{}
 \hugeQuote{HOPE}{Hope is a poor hedge}{}{Erik R. Sirri}{}{2007, but likely earlier}
