--- a/Introduction.tex
+++ b/Introduction.tex
@@ -2,9 +2,12 @@
 \cleardoublepage
 
 We all want to be better people, shout at the kids less often, get some perspective at work and call our friends and family more. We have a picture of a better version of ourselves but we're still fallible, lazy, tired and busy. Best intentions fall away and we forget our better selves. 
-To make our jobs a little easier we can listen to Marcus Aurelius who tells us that without a goal we can't live consistently (cf. \ref{MA_GOAL}). Thinking about the sort of qualities we want to show is a great first step but we need a little more help. 
-To get us through the tough spots We're going to get help from philosophers, deities, sportsmen, fictional characters, artists and other people smarter than us. 
+To make our jobs a little easier we can listen to Marcus Aurelius who tells us that without a goal we can't live consistently (cf. \ref{MA_GOAL}). Thinking about the sort of qualities we want to show is a great first step but we need a little more help. Thinking about the sort of person we want to be and looking closely at the qualities they embody we can come up with a consistent goal, a set of high or even unattainable targets. 
 
-The hope here is that we can turn to our "manual" for help at times when previous generations may have turned to their religious text of choice for solace or guidance. 
+Even with our goal, we'll still fail. Badly. But to get us through the tough spots We're going to get help from philosophers, deities, sportsmen, fictional characters, artists and other people far smarter than us. 
 
-The set of qualities we're looking to develop here are inspired in part by the Modern Virues page from the School of Life (\llink{http://bit.ly/1XoP0tE}), the majority of content is helpful quotes and aphorisms. Anything useful you find in these pages will be directly attributable to them. 
+The hope here is that we can turn to this "manual" for help at times when we're losing our way, forgetting what's important to us and the promises we've made about the sort of person we want to become.
+
+The set of qualities we're looking to develop here are inspired in part by the Modern Virtues page from the School of Life \llink{http://bit.ly/1XoP0tE}, the majority of content is helpful quotes and aphorisms. Anything useful you find in these pages will be directly attributable to them. 
+
+Good luck, and live well.
