add content for focus intro
And some re- positioning

--- a/Focus.tex
+++ b/Focus.tex
@@ -1,12 +1,21 @@
 
 \input{FocusIntro.tex}
 
+\smallQuote{CYM}{Call your mom}{}{}
+ 
+\cleardoublepage
+
+\hugeQuote{PL_DST}{Don't spend time with people you don't like}{}{Prue Leith}{}{}
+\hugeQuote{LC_COMPANY}{You are }{whatever the company you keep is}{Lord Chesterfield}{}{}
+
+\hugeQuote{C_HONOR}{Let your mind dwell}{ on examples of honor}{Cicero}{}{} % cf machiavelli ?
+
 \clearpage
 
 \smallQuote{RH_LIFERS}{Steer clear of lifers, the toxic and charlatans.\newline You become who you know}{Ryan Holiday}{}
 \smallQuote{GBS_PIGS1}{Never wrestle with pigs, you both get dirty and the pig likes it}{George Bernard Shaw}{RH_PIGS2}
 
-\smallQuote{DA_CDA}{You can do anything.\newline but you can't do everything.}{David Allen}{}
+\smallQuote{DA_CDA}{You can do anything.\newline but you can't do everything.}{David Allen}{MA_SMALL}
 
 \smallQuote{BC_RYP}{Reaching your true potential involves choice. \newline How exactly you choose to excel is up to you}{Brian Colbert}{}
 
@@ -14,15 +23,8 @@
 
 \smallQuote{BJ_DWYL}{If you're not doing what you love, you're wasting your time}{Billy Joel}{}
 
-\smallQuote{MA_SMALL}{You're better off not giving the small things more time than they deserve}{Marcus Aurelius}{}
+\HugeQuote{MA_SMALL}{You're better off not giving the small things more time than they deserve}{Marcus Aurelius}{}
 
-
-\clearpage
-
-\hugeQuote{PL_DST}{Don't spend time with people you don't like}{}{Prue Leith}{}{}
-\hugeQuote{LC_COMPANY}{You are }{whatever the company you keep is}{Lord Chesterfield}{}{}
-
-\hugeQuote{C_HONOR}{Let your mind dwell}{ on examples of honor}{Cicero}{}{} % cf machiavelli ?
 
 \clearpage
 
@@ -43,7 +45,7 @@ Ask yourself at every moment "is this necessary?"}
 
 \hugeQuote{OW_HW}{Hard work}{ is simply the refuge of people how have nothing better to do}{Oscar Wilde}{}{}
 
-\hugeQuote{RH_PIGS2}{Never try to teach a pig to sing.}{\newline It wastes time and annoys the pig.}{Robert Heinlein}{GBS_PIGS1}{}
+\hugeQuote{RH_PIGS2}{Never try to teach a pig to sing.}{\newline It wastes time and annoys the pig.}{Robert Heinlein}{GBS_PIGS1}{} 
 
 
 \clearpage
@@ -69,7 +71,7 @@ Ask yourself:
 \item is it just self indulgent?
 \end{itemize}}{}{}{}
 
-\hugeQuote{MA_GOAL}{If you don't have a consistent goal in life}{, how can you live it in a consistent way?}{Marcus Aurelius}{}{}
+\HugeQuote{MA_GOAL}{If you don't have a consistent goal in life}{, how can you live it in a consistent way?}{Marcus Aurelius}{}{}
 
 \hugeQuote{MA_HMYD}{Treat what you don't have as non-existent}{
 
