--- a/FocusIntro.tex
+++ b/FocusIntro.tex
@@ -1,10 +1,10 @@
 \cleardoublepage
 
-As hard as it can be to take action, it can be even harder to maintain the level of focus we need to on the right things. We're too polite putting ourselves to one side to avoid offending people (cf. \ref{PL_DST} and \ref{GVG_ALONE}), we make great gains on Twitter and Facebook while ignoring our Amazing Book Idea (cf. \ref{MA_SMALL}) and spend hours mindlessly scrolling around crappy journalism when we could be reading an immersive classic (cf. \ref{TP_BOOK}) or working on our supposedly beloved hobby (cf. \ref{BB_PRACTICE}).
+As hard as it can be to take action, it can be even harder to maintain the level of focus we need to on the right things. We're too polite putting ourselves and our priorities to one side to avoid offending people (cf. \ref{PL_DST} and \ref{GVG_ALONE}), we make great gains on Twitter and Facebook while we let our Amazing Book Idea gather dust (cf. \ref{MA_SMALL}) and spend hours mindlessly scrolling around crappy journalism when we could be reading an immersive novel (cf. \ref{TP_BOOK}) or working on our supposedly beloved hobby (cf. \ref{BB_PRACTICE}). 
+Epictetus reminds us that we need to gut things from our lives which take us away from the serious and important business of improvement. We can be sure that nothing truly terrible will happen if we stop using social media and watching 24 hour rolling news with repeats every 25 minutes or so. We can be supremely confident that life will carry on if we leave the "mind numbing spirit crushing game shows\footnote{Renton, Trainspotting}" to someone else. There are so many ways to spend the time we have, we need to be careful not to waste it and that can require significant effort. Consistently asking ourselves whether what we're doing right now is truly important to us (cf. \ref{MA_DL}) will be exhausting but ultimately incredibly valuable.
 
-Epictetus reminds us that we need to gut things which take us away from the serious and important business of improvement from our lives. We can be sure that nothing truly terrible will happen if we stop using social media and watching 24 hour rolling news with repeats every 25 minutes or so. We can be supremely confident that life will carry on if we leave the "mind numbing spirit crushing game shows\footnote{Renton, Trainspotting}" to someone else.
 Maybe we should call someone who's important to us and focus soley on that for starters. 
 
-Go ahead, the advice and guidance on the next few pages will still be here.
+Let's take 15 minutes. The advice and guidance on the next few pages will still be here when we get back. 
 
 \clearpage
