--- a/Leadership.tex
+++ b/Leadership.tex
@@ -41,7 +41,7 @@ over deliver}{Tom Peters}{}{}
 \hugeQuote{SC_BAD}{\texttt{use strict;}}{\newline good servant, \newline bad master.}{Simon Cozens}{}{}
 
 
-\hugeQuote{LZ_CHIEF}{Be the chief}{ but never the lord}{Lao Tzu}{}{}
+\hugeQuote{LT_CHIEF}{Be the chief}{ but never the lord}{Lao Tzu}{}{}
 \hugeQuote{KR_SPORT}{One man practicing sportsmanship}{ is better than 100 teaching it}{Knute Roche}{HF_REP}{}
 
 
