--- a/ActionIntro.tex
+++ b/ActionIntro.tex
@@ -4,7 +4,7 @@ Without action of some kind our plans for improvement simply won't get very far.
 Taking action isn't always easy and choosing the right move (cf. \ref{JVG_ACT}) at the right time (cf. \ref{ST_WAIT}) can be stupefyingly hard.
 The hope is though that we won't be paralysed and we will make an impact on the things important to us.
 
-We won't be successful all the time (in particular I'm not even be successful much of the time) but by persevering (cf. \ref{AR_HABIT} and \ref{JP_STAND}) we can chip away at the habits that are slowing us down or even undoing good progress we've already made.
+We won't be successful all the time (in particular I'm not even be successful much of the time) but by persevering (cf. \ref{AR_HABIT} and \ref{JP_STAND}) we can chip away at the habits (and even relationships (cf. \ref{LC_COMPANY})) that are slowing us down or even undoing good progress we've already made.
 
 We need to remember what's important to us. Remember how much time we have and how we choose to spend it. Marcus often looks at how little life he's been allotted (and how much he thinks he has left) and it's a good reminder for people like us to just get on with it.
 
