--- a/Humility.tex
+++ b/Humility.tex
@@ -10,7 +10,7 @@
 \hugeQuote{DLP_HELP}{Take the help}{}{Danielle La Porte}{}{}
 
 \hugeQuote{RH_LIVE}{Learn as if you were going to live}{ but live as if you were going to die tomorrow.}{via Ryan Holiday}{}{}
-\hugeQuote{IP_GAME}{Afterr the game}{ the king and the pawn go back into the same box}{Italian Proverb}{}{}
+\hugeQuote{IP_GAME}{After the game}{ the king and the pawn go back into the same box}{Italian Proverb}{}{}
 \hugeQuote{MA_LIVE}{You could leave this life right now.}{ Let that determine how you act.}{Marcus Aurelius}{}{}
 
 \hugeQuote{E_LUCK}{Foolish is the man who delights in his good fortune, supposing it will never leave him.}{}{Euripides}{S_ENDURE}{}
