--- a/Gratitude.tex
+++ b/Gratitude.tex
@@ -11,3 +11,10 @@
 \hugeQuote{S_CUCUMBER}{Get used to your circumstances}{, complain about them as little as possible. Grasp whatever advantages they have to offer}{Seneca}{MA_CUCUMBER}{}
 
 \hugeQuote{E_MORTAL}{When you kiss your wife}{ or child, repeat to yourself, "I am kissing a mortal"}{Epictetus}{}{and she may be gone to orrow.}
+
+\hugeQuote{MA_HMYD}{Treat what you don't have as non-existent}{
+
+	Look at what you have, the things you value most and think how much you'd crave them 
+	if you didn't have them
+}{Marcus Aurelius}{RH_HMY}{}
+
