add content up to page eight and some layout playing

--- a/Action.tex
+++ b/Action.tex
@@ -30,3 +30,4 @@ Idea, action, utterance}{Marcus Aurelius}{}{}
 To act is hard\newline
 But the hardest thing of all is to act in accordance with your thinking}{John Von Goethe}{}{}
 
+\HugeQuote{YB_FORK}{When you come to a fork in the road}{, take it}{Yogi Bera}{}{}
