--- a/ActionIntro.tex
+++ b/ActionIntro.tex
@@ -1,4 +1,5 @@
 \cleardoublepage
+\begin{multicols}{2}
 
 Without action of some kind our plans for improvement simply won't get very far. We need to look at the mamoth task in front of us and take that scary first step (and then the next). 
 Taking action isn't always easy and choosing the right move (cf. \ref{JVG_ACT}) at the right time (cf. \ref{ST_WAIT}) can be stupefyingly hard.
@@ -10,4 +11,5 @@ We need to remember what's important to us. Remember how much time we have and h
 
 We also need to remember that people will see where we spend our time and the choices made. No matter what we say they will believe what they see (and don't see). 
 
+\end{multicols}
 \clearpage
