--- a/Confidence.tex
+++ b/Confidence.tex
@@ -23,3 +23,6 @@ Whatever.}{Danielle La Parte}{MA_DWH}{}
 \hugeQuote{NT_FAIL}{A mistake is not something to be determined after the fact}{ but in the light of information up to that point}{Nassim Taleb}{}{}
 
 \smallQuote{SP_FAIL}{A failed attempt is just that and nothing more, it’s not the end and it’s not fatal. Keep at it.}{}{}
+
+\hugeQuote{NH_FAIL}{Failure connot cope with persistence.}{}{Napoleon Hill}{MAR_PERSIST}{}
+\hugeQuote{WS_FEAR}{Our doubts are traitors}{, and make us lose the good we might oft win be fearing to attempt.}{William Shakespear}{}{}
