--- a/Humility.tex
+++ b/Humility.tex
@@ -43,3 +43,8 @@ the same grace shown too you}{Marcus Aurelius}{}{}
 
 
 \hugeQuote{ME_BEGIN}{Be willing}{ to be a beginner every single morning}{Meister Eckhart}{EP_FOOL}{}
+
+
+
+\smallQuote{MC_BOAST}{Boasting is what a boy does, because he has no real  effect on the world.}{Matthew Crawford}{}
+
