--- a/Leadership.tex
+++ b/Leadership.tex
@@ -32,7 +32,7 @@ over deliver}{Tom Peters}{}{}
 
 \hugeQuote{HF_REP}{You can't build a reputation}{ on what you're going to do}{Henry Ford}{}{}
 
-\hugeQuote{RG_BOAST}{Be careful not to baost}{ of any success}{Robert Greene}{}{}
+\hugeQuote{RG_BOAST}{Be careful not to baost}{ of any success}{Robert Greene}{MC_BOAST}{}
 
 \hugeQuote{SP_QUIET}{Be quiet}{, work hard, stay healthy}{}{}{}
 
@@ -85,3 +85,8 @@ If you can't do that the blame lies with you or no one}{Marcus Aurelius}{HT_CRED
 \item for any other reason than the common good
 \end{itemize}
 }{Marcus Aurelius}{TF_SLO}{}{}
+
+\hugeQuote{RLS_QUIET}{Quiet minds cannot be perplexed}{ or frightened but go on like a clock \ldots in a thunderstorm}{Robert Louis Stephenson}{}{}
+
+
+\smallQuote{RG_TRUSTYOU}{In the end, if people mistrust you and resist your authority you have only yourself to blame}{Robert Greene}{}
