--- a/Learning.tex
+++ b/Learning.tex
@@ -11,10 +11,25 @@
 \hugeQuote{RG_LATE}{You think you are doing fine}{ you are not compelled to adapt until it is too late}{Robert Greene}{}{}
 
 %\hugeQuote{}{}{}{}{}{}
-
-\hugeQuote{H_ART}{The art lies in}{ concealing the art}{Horace}{}{}
-
+\hugeQuote{H_ART}{The art lies in concealing the art}{}{Horace}{}{} 
 \hugeQuote{M_WORK}{If people knew how hard I worked, it would not seem so masterful}{Michelangelo}{}{}
+
+\hugeQuote{RG_WORK}{never expose the sweat}{ and labor behind your poise}{Robert Greene}{}{}
 
 
 \hugeQuote{NT_NNP}{Never nitpick a heuristic}{}{Nassim Taleb}{}{}
+
+\hugeQuote{RG_MASTERY}{You must see your attempt at attaining mastery}{ as something necessary and positive}{Robert Greene}{}{}
+
+\HugeQuote{RH_ML}{More listening, more learning}{\newline
+	Fewer interruptions, fewer conclusions.
+}{Ryan Holiday}{MA_CHANGE}{}
+
+\smallQuote{BR_CHANGE}{I would never die for my beliefs because I might be wrong}{Bertand Russell}{}
+
+
+\hugeQuote{BF_INVEST}{An investment in knowledge}{ always pays the best interest.}{Benjamin Franklin}{}{}
+%todo possibly humility 
+%cf bertrand russell learning/flowers
+\hugeQuote{MDM_BOAST}{Does learning mean nothing to you}{ unless you know that someone else knows that you know it?}{Michel de Montaigne}{MC_BOAST}{}
+
