--- a/Patience.tex
+++ b/Patience.tex
@@ -7,7 +7,7 @@ Am I in charge of this situation or is this situation in charge of me?}{Anthony 
 If there is a prospect of vicory move; \newline
 If there is no prospect of victory do not move.}{Sun Tzu}{}{}
 
-\hugeQuote{RG_WAIT}{Impatience}{: perhaps the single greatest pitfall}{Robert Greene}{}{}
+\hugeQuote{RG_WAIT1}{Impatience}{: perhaps the single greatest pitfall}{Robert Greene}{}{}
 
 \hugeQuote{MA_GRIEF}{How much more damage grief and ager do}{ than the things that caused them}{Marcus Aurelius}{}{}
 
@@ -16,3 +16,11 @@ If there is no prospect of victory do not move.}{Sun Tzu}{}{}
 
 %TODO seneca at the door
 \hugeQuote{WG_JUDGE}{The senses don't decieve}{ judgement deceives}{Goethe}{}{}
+
+\HugeQuote{I_GOAL}{It is more important to know where you're going than to get there quickly}{}{Isocrates}{MA_GOAL}{}
+
+
+\smallQuote{PS_RAGE}{Patience Wounded too often becomes rage}{Publius Syrus}{}
+
+\smallQuote{RG_WAIT2}{If you are unsure of a course of action do not attempt it. Your doubts and hestitation will infect your execution}{Robert Greene}{ST_WAIT}{}
+
