--- a/Resilience.tex
+++ b/Resilience.tex
@@ -171,3 +171,6 @@ That's all you need}{Marcus Aurelius}{}{}
 \hugeQuote{H_TRAVEL}{It is reason and wisdom which take away cares}{\newline
 not places afording views over the sea}{Horace}{A_ALONE}{}
 
+\hugeQuote{GKN_WORK}{Successful people are not gifted}{; they just work hard, \newline
+then succeed.\newline
+On purpose}{G. K. Nielson}{M_WORK}{}
