--- a/Introduction.tex
+++ b/Introduction.tex
@@ -1,6 +1,8 @@
 
 \cleardoublepage
 
+\begin{multicols}{2}
+
 We all want to be better people, shout at the kids less often, get some perspective at work and call our friends and family more. We have a picture of a better version of ourselves but we're still fallible, lazy, tired and busy. Best intentions fall away and we forget our better selves. 
 To make our jobs a little easier we can listen to Marcus Aurelius who tells us that without a goal we can't live consistently (cf. \ref{MA_GOAL}). Thinking about the sort of qualities we want to show is a great first step but we need a little more help. Thinking about the sort of person we want to be and looking closely at the qualities they embody we can come up with a consistent goal, a set of high or even unattainable targets. 
 
@@ -8,6 +10,9 @@ Even with our goal, we'll still fail. Badly. But to get us through the tough spo
 
 The hope here is that we can turn to this "manual" for help at times when we're losing our way, forgetting what's important to us and the promises we've made about the sort of person we want to become.
 
-The set of qualities we're looking to develop here are inspired in part by the Modern Virtues page from the School of Life \llink{http://bit.ly/1XoP0tE}, the majority of content is helpful quotes and aphorisms. Anything useful you find in these pages will be directly attributable to them. 
+The set of qualities we're looking to develop here are inspired in part by the Modern Virtues page from the School of Life 
+\llink{http://thephilosophersmail.com/wp-content/uploads/2014/04/Ten-Virtues.pdf}, the majority of content is helpful quotes and aphorisms. Anything useful you find in these pages will be directly attributable to them. 
 
 Good luck, and live well.
+
+\end{multicols}
