add content from small notebook

--- a/Action.tex
+++ b/Action.tex
@@ -2,6 +2,8 @@
 
 \smallQuote{BD_ACT}{Action may not always bring happiness, but without action there is none}{Benjamin Disraelli}{}
 
+\smallQuote{MG_ACT}{You may never know what results come from your action but if you do nothing there will be no result}{Mahatma Ghandi}{}
+
 \smallQuote{MA_NOW1}{Each of us lives only now in this brief instant. The rest has been lived already or is impossible to see}{Marcus Aurelius}{}
 
 \smallQuote{MA_CREDIT}{Do what nature demands. Get a move on if you have it in you and don't worry whether anyone will give you any credit for it.
@@ -31,3 +33,10 @@ To act is hard\newline
 But the hardest thing of all is to act in accordance with your thinking}{John Von Goethe}{}{}
 
 \HugeQuote{YB_FORK}{When you come to a fork in the road}{, take it}{Yogi Bera}{}{}
+
+
+\HugeQuote{JL_LIFE}{Life is what happens}{ while you are busy making other plans}{John Lennon}{}{}
+
+
+\hugeQuote{RG_PROBLEM}{When you confront a problem}{ you begin to solve it}{Rudy Guilliani}{BW_TALK}{}
+
