--- a/Confidence.tex
+++ b/Confidence.tex
@@ -8,7 +8,7 @@ From within it you will find endless oppourtunities that elude other people}{Rob
 
 \hugeQuote{SL_SC}{So often self confidence is dependent on the basic but elusive premise}{\newline
 "I'm fine as I am"}{via the School of Life}{}
-{\href{http://www.thebookoflife.org/on-confidence/}{on confidence}} %also include the more confident notes maybe 
+{On confidence\llink{http://www.thebookoflife.org/on-confidence/}} %also include the more confident notes maybe 
 
 \hugeQuote{HM_DWW}{Don't water your weeds}{}{Harvey Mackay}{}{}
 
@@ -26,3 +26,20 @@ Whatever.}{Danielle La Parte}{MA_DWH}{}
 
 \hugeQuote{NH_FAIL}{Failure connot cope with persistence.}{}{Napoleon Hill}{MAR_PERSIST}{}
 \hugeQuote{WS_FEAR}{Our doubts are traitors}{, and make us lose the good we might oft win be fearing to attempt.}{William Shakespear}{}{}
+
+\hugeQuote{RH}{You don't have to be the best}{ you just have to be harder to destory. You have to be relentless}{Ryan Holiday}{NH_FAIL}{}
+
+\hugeQuote{RG_DISPLAY}{You cannot display yourself too brazenly}{, yet you must get noticed. Create a distinctive (a subtly distinctive) style and image.}{Robert Greene}{}{}
+
+\smallQuote{RG_RADIATE}{Understand: you should be radiating confidence not arrogance and disdain}{Robert Greene}{}
+
+
+
+\hugeQuote{EG_ASK}{He who demands litte}{ gets it.}{Ellen Glasgow}{}{} % cf DLP asking increases
+
+\hugeQuote{DLP_NYG}{You are not}{ your genes}{Danielle La Porte}{}{}
+
+
+\hugeQuote{LB_SEP}{Don't let someone else's opinion of you become your reality}{}{Les Brown}{}{}
+
+\hugeQuote{HM_MIRACE}{Don't look for miracles}{ you yourself are the miracle}{Henry Miller}{}{}
