--- a/Focus.tex
+++ b/Focus.tex
@@ -81,3 +81,17 @@ Ask yourself:
 
 \hugeQuote{FC_OWN}{The things you used to own}{. Now they own you}{Jack, Fight Club}{}{}
 
+
+\hugeQuote{HDT_BACK}{Never look back}{ unless you're planning to go that way.}{Henry David Thoreau}{}{}
+
+\smallQuote{FP_BACK}{It's a long road there's no turning back}{Funki Porcini}{}
+
+
+\hugeQuote{RH_6MONTHS}{In six months}{ you will have discarded most of what you claim is important right now.}{Ryan Holiday}{}{}
+
+\HugeQuote{TF_HARD}{Sometimes the hard stuff is hard because you shouldn't do it in the first place}{Tim Ferriss}{}{}
+
+\hugeQuote{BD_LIFE}{A man is successful}{ if he gets up in the morning, goes to bed at night and in between does what he wants to.}{Bod Dylan}{BJ_DWYL}{}
+
+
+\HugeQuote{MT_NOMFUP}{NoMFuP}{}{Malcolm Tucker}{}{Handy to remind ourselves what we should be paying attention to.}
