--- a/Generosity.tex
+++ b/Generosity.tex
@@ -35,3 +35,6 @@ Yet, I do not intend that to be the definition of me}{Michel De Montaigne}{HM_DW
 
 %Unsure on which chapter
 \hugeQuote{LT_PAST}{Forgiveness means giving up hope}{ of a better past}{Lily Tomlin}{MA_NOW1}{}
+
+
+\hugeQuote{H_LIGHT}{Light cares can talk}{ huge ones are strick dumb}{Hippolitus}{}{}
