--- a/Gratitude.tex
+++ b/Gratitude.tex
@@ -10,7 +10,7 @@
 
 \hugeQuote{S_CUCUMBER}{Get used to your circumstances}{, complain about them as little as possible. Grasp whatever advantages they have to offer}{Seneca}{MA_CUCUMBER}{}
 
-\hugeQuote{E_MORTAL}{When you kiss your wife}{ or child, repeat to yourself, "I am kissing a mortal"}{Epictetus}{}{and she may be gone to orrow.}
+\hugeQuote{E_MORTAL}{When you kiss your wife}{ or child, repeat to yourself, "I am kissing a mortal"}{Epictetus}{}{and she may be gone tomorrow.}
 
 \hugeQuote{MA_HMYD}{Treat what you don't have as non-existent}{
 
@@ -18,3 +18,17 @@
 	if you didn't have them
 }{Marcus Aurelius}{RH_HMY}{}
 
+
+
+\HugeQuote{RG_WONDER}{The ability to express wonder and amazement}{ and seem like you mean it, is a rare a dying talent but one that is still greatly valued}{Robert Greene}{RWE_STARS}{}
+
+
+\HugeQuote{TBP_4IMM}{May all  beings have happiness and the causes of happiness}{
+
+May all sentient beings be free of suffering and the causes of suffering
+
+May all sentient beings not be separated from sorrowless bliss
+
+May all sentient beings abide in equanimity, free of bias, attachment and anger}{Traditional Buddhist Prayer}{}{The four immesurables.}
+
+\HugeQuote{CP_SCAR}{It is so hard to foget pain}{ but it is harder to remember sweetness. There is no scar for happiness}{Chuck Palaniuk}{}{}
