--- a/Leadership.tex
+++ b/Leadership.tex
@@ -90,3 +90,27 @@ If you can't do that the blame lies with you or no one}{Marcus Aurelius}{HT_CRED
 
 
 \smallQuote{RG_TRUSTYOU}{In the end, if people mistrust you and resist your authority you have only yourself to blame}{Robert Greene}{}
+
+
+\hugeQuote{C_ABILITY}{Ability will never catch up}{ with the demand for it}{Confucious}{}{}
+
+\hugeQuote{LR_WORK}{It takes a great talent and skill}{ to conceal a great talent and skill}{François de La Rochefoucauld}{M_WORK}{}
+
+\hugeQuote{RG_WORK2}{Everything is judged by its appearance}{; what is unseen counts for nothing. Do not get lost in the crowd or burried in oblivion}{Robert Greene}{}{}
+
+
+
+
+\hugeQuote{CWB_FEEL}{They may foget what you said}{ but they will never forget how you made them feel.}{Carl W. Buechner}{}{}
+
+
+
+\hugeQuote{BG_NTL}{Never content with a man who has nothing to lose}{}{Baltazar Graçian}{ST_WAIT}{}
+
+
+
+
+\hugeQuote{TF_DISCLOSURE}{Disclosure is disinfectant}{}{Tim Ferriss}{}{}
+
+\hugeQuote{S_DISCLOSURE}{All defects are lighter in the open}{. They are most pernicious when concealed beneath a pretense of soundness}{Seneca}{}{We don't need to post our defects on Facebook, but we can spend some time thinking about them\llink{http://thephilosophersmail.com/PhilosophicalMeditation.pdf}}
+
