--- a/Learning.tex
+++ b/Learning.tex
@@ -33,3 +33,6 @@
 %cf bertrand russell learning/flowers
 \hugeQuote{MDM_BOAST}{Does learning mean nothing to you}{ unless you know that someone else knows that you know it?}{Michel de Montaigne}{MC_BOAST}{}
 
+\hugeQuote{MDM_MAKE}{It is a greater thing to make oneself impassable}{ than to be impassable as a property of one's nature.}{Michel De Monataigne}{}{}
+
+\hugeQuote{S_FOLLY}{It's it the height of folly to learn inessential things}{ when time is so desperately short?}{Seneca}{MA_DL}{}
