--- a/Resilience.tex
+++ b/Resilience.tex
@@ -53,7 +53,7 @@ Ta ouk eph'hemin}{Stoic phrase}{}{what is up to us, what is not up to us.}
 \hugeQuote{S_PROBLEMS}{Nothing either good nor bad}{ but thinking makes it so}{Shakespeare}{}{}
 
 \hugeQuote{TNV_PROBLEMS}{Real difficulties can be overcome}{\newline 
-It's only the imaginary ones that are unconquerable}{Theodore N Vail}{}{}
+It's only the imaginary ones that are unconquerable}{Theodore N Vail}{UG_COUNT}{}
 
 \hugeQuote{RH_PROBLEMS}{Problems are rarely as bad as we think they are}
 {, or rather, they are precisely as bad as we think they are}{Ryan Holiday}{MA_JUDGE}{}
@@ -70,7 +70,7 @@ endure what we must}{Ryan Holiday}{}{}
 Not to trust prosperity.\newline \newline
 And always take note of Fortune's habit of behaving exactly as she pleases}{Seneca}{}{}
 
-\hugeQuote{JKZ_ENDURE}{You can't stop the waves}{ but you can learn how to surf}{Jon Kabat Zin}{}{}
+\hugeQuote{JKZ_ENDURE}{You can't stop the waves}{ but you can learn how to surf}{Jon Kabat Zin}{H_CHANGE}{}
 
 \clearpage
 
@@ -104,9 +104,7 @@ you have entrusted your happiness to others.}{Marcus Aurelius}{}{}
 \hugeQuote{HOPE}{Hope is a poor hedge}{}{Erik R. Sirri}{}{2007, but likely earlier}
 \hugeQuote{SP_LUCK}{Preparation}{ not luck}{}{}{}
 
-\hugeQuote{MA_PERSIST1}{So keep at it}{ until it's fully digested.\newline
-A strong stomach digests whatever it eats.\newline
-A blazing fire takes whatever you throw on it and makes light and flame.}{Marcus Aurelius}{CP_FAIL}{}
+\hugeQuote{MA_PERSIST1}{So keep at it}{ until it's fully digested. A strong stomach digests whatever it eats. A blazing fire takes whatever you throw on it and makes light and flame.}{Marcus Aurelius}{CP_FAIL}{}
 
 \hugeQuote{MAR_PERSIST}{Courage doesn't always roar.}{\newline
 Sometimes courage is the quiet voice at the end of the day whispering "I will try again tomorrow"}{Mary Anne Radmach}{MA_PERSIST2}{}
@@ -171,6 +169,21 @@ That's all you need}{Marcus Aurelius}{}{}
 \hugeQuote{H_TRAVEL}{It is reason and wisdom which take away cares}{\newline
 not places afording views over the sea}{Horace}{A_ALONE}{}
 
-\hugeQuote{GKN_WORK}{Successful people are not gifted}{; they just work hard, \newline
-then succeed.\newline
+\hugeQuote{GKN_WORK}{Successful people are not gifted}{; they just work hard, then succeed. \newline
 On purpose}{G. K. Nielson}{M_WORK}{}
+
+
+
+\hugeQuote{H_CHANGE}{Change is the only constant in life}{}{Heraclitus}{}{}
+
+\hugeQuote{JM_CHANGE}{You can suffer}{ the pain of change or suffer remaining the way you are.}{Joyce Meyer}{}{}
+
+
+\hugeQuote{RG_CONFLICT}{The more conflicts and difficult situations you put yourself through}{ the more battle tested your mind will be.}{Robert Greene}{RH_RAW}{}
+
+\HugeQuote{HA_PREPARE}{This is the precept by which I have lived}{:\newline
+Prepare for the worst, expect the best and take what comes.}{Hannah Ardent}{}{}
+
+\hugeQuote{TT_BURDEN}{The burden is equal to the strength of the horse}{}{The Talmud}{}{}
+
+
