--- a/ResilienceIntro.tex
+++ b/ResilienceIntro.tex
@@ -3,7 +3,7 @@
 
 We can't have full control and so things won't always turn out as we'd hoped. Having the courage to pursue our goal in the face of set backs and 
 
-We're also going to run into oposition as we make progress. Others will see our improvement and resent us (cf. \ref{TS_HATE}) for showing them in an unfavourable light. We just need to rise above that and remember what we're trying to acheive. 
+We're also going to run into oposition as we make progress. Others will see our improvement and resent us (cf. \ref{TS_HHH}) for showing them in an unfavourable light. We just need to rise above that and remember what we're trying to acheive. 
 
 \end{multicols}
 \clearpage
