--- a/Humility.tex
+++ b/Humility.tex
@@ -6,7 +6,7 @@
 \clearpage
 
 \hugeQuote{MT_VISIT}{If you're not humble}{ life will visit humility upon you}{Mike Tyson}{}{}
-\hugeQuote{ST_GUIDE}{He who does not emply a guide cannot gain advantage from the ground}{}{Sun Tzu}{}{}
+\hugeQuote{ST_GUIDE}{He who does not employ a guide cannot gain advantage from the ground}{}{Sun Tzu}{}{}
 \hugeQuote{DLP_HELP}{Take the help}{}{Danielle La Porte}{}{}
 
 \hugeQuote{RH_LIVE}{Learn as if you were going to live}{ but live as if you were going to die tomorrow.}{via Ryan Holiday}{}{}
@@ -14,8 +14,7 @@
 \hugeQuote{MA_LIVE}{You could leave this life right now.}{ Let that determine how you act.}{Marcus Aurelius}{}{}
 
 \hugeQuote{E_LUCK}{Foolish is the man who delights in his good fortune, supposing it will never leave him.}{}{Euripides}{S_ENDURE}{}
-\hugeQuote{MA_LUCK1}{To accept it without arrogance,}{\newline
-to let it go with indifference}{Marcus Aurelius}{E_LUCK}{}
+\hugeQuote{MA_LUCK1}{To accept it without arrogance,}{to let it go with indifference}{Marcus Aurelius}{E_LUCK}{}
 
 
 \hugeQuote{RH_CHANGE}{Your opinion is either dependent on the facts or it's not;}{\newline
@@ -44,7 +43,31 @@ the same grace shown too you}{Marcus Aurelius}{}{}
 
 \hugeQuote{ME_BEGIN}{Be willing}{ to be a beginner every single morning}{Meister Eckhart}{EP_FOOL}{}
 
+\smallQuote{MC_BOAST}{Boasting is what a boy does, because he has no real  effect on the world.}{Matthew Crawford}{C_BOAST}
 
 
-\smallQuote{MC_BOAST}{Boasting is what a boy does, because he has no real  effect on the world.}{Matthew Crawford}{}
+\hugeQuote{C_BOAST}{A superior man is modest in his speech}{ but exceeds in his actions}{Confucious}{}{}
 
+
+
+\hugeQuote{RG_CRITICISM}{Never be so self absorbed}{ as to beleive that the master is interested in your criticisms of him, now matter how accurate they are}{Robert Greene}{}{}
+
+\hugeQuote{SP_CRITICISM}{Listen to their criticism}{, take it and use it to improve}{}{}{}
+
+\hugeQuote{JVG_VALUE}{A great failing}{: to see yourself as more than you are and value yourself at less than your true worth}{John Von Goethe}{}{} %cf p63
+
+\hugeQuote{WS_FOOL}{The fool doth think e is wise and the wise man knows himself to be a fool}{}{William Shakespeare}{P_TALK}{}
+
+\hugeQuote{CTG_COUNSEL}{Diversity in counsel}{, unity in command}{Cyrus the Great}{ST_GUIDE}{} % possibly move to confidence
+
+
+
+\hugeQuote{TD_UNIQUE}{You are not a beautiful and unique snowflake}{}{Tyler Durden}{}{}
+
+
+\hugeQuote{JDB_UNNAMED}{The unnamed should not be mistaken for the non-existant}{}{Jon de la Brugére}{}{}
+
+
+
+
+\hugeQuote{GBS_CBD}{Those who say it cannot be done}{ should not interrupt those who are doing it}{George Bernad Shaw}{MA_NOW2}{}
