--- a/Patience.tex
+++ b/Patience.tex
@@ -24,3 +24,19 @@ If there is no prospect of victory do not move.}{Sun Tzu}{}{}
 
 \smallQuote{RG_WAIT2}{If you are unsure of a course of action do not attempt it. Your doubts and hestitation will infect your execution}{Robert Greene}{ST_WAIT}{}
 
+\smallQuote{RG_TALK}{Once the words are out, you cannot take them back. Keep them under control.}{Robert Greene}{}
+
+\hugeQuote{P_TALK}{Wise men speak because they have something to say}{; fools speak because they have to say something.}{Plato}{}{}
+
+\HugeQuote{RH_TALK}{The best advice I ever got}{ was "shut up"}{Ryan Holiday}{}{Always say less than necessary\llink{http://thoughtcatalog.com/ryan-holiday/2015/06/shut-up-when-theyre-talking-to-you-always-say-less-than-necessary/}.}
+
+\hugeQuote{BG_ANGER}{Never do anything}{ when you are in a temper, for you will do everything wrong}{Baltazar Gracian}{}{}
+
+\hugeQuote{RG_ANGER}{Anger and emotion are strategically conterproductive}{. You must always stay calm and objective}{Robert Greene}{}{}
+
+\hugeQuote{LT_ANGER}{The best fighter is never angry}{}{Lao Tzu}{}
+
+
+\HugeQuote{AM_FEAR}{Fear is a bad advisor.}{}{Angela Merkel}{}{}
+
+
