correct spelling of Gracian

--- a/Leadership.tex
+++ b/Leadership.tex
@@ -105,7 +105,7 @@ If you can't do that the blame lies with you or no one}{Marcus Aurelius}{HT_CRED
 
 
 
-\hugeQuote{BG_NTL}{Never content with a man who has nothing to lose}{}{Baltazar Graçian}{ST_WAIT}{}
+\hugeQuote{BG_NTL}{Never content with a man who has nothing to lose}{}{Baltazar Gra\c{c}ian}{ST_WAIT}{}
 
 
 
