--- a/Patience.tex
+++ b/Patience.tex
@@ -30,7 +30,7 @@ If there is no prospect of victory do not move.}{Sun Tzu}{}{}
 
 \HugeQuote{RH_TALK}{The best advice I ever got}{ was "shut up"}{Ryan Holiday}{}{Always say less than necessary\llink{http://thoughtcatalog.com/ryan-holiday/2015/06/shut-up-when-theyre-talking-to-you-always-say-less-than-necessary/}.}
 
-\hugeQuote{BG_ANGER}{Never do anything}{ when you are in a temper, for you will do everything wrong}{Baltazar Gracian}{}{}
+\hugeQuote{BG_ANGER}{Never do anything}{ when you are in a temper, for you will do everything wrong}{Baltazar Gra\c{c}ian}{}{}
 
 \hugeQuote{RG_ANGER}{Anger and emotion are strategically conterproductive}{. You must always stay calm and objective}{Robert Greene}{}{}
 
