add intro comments for resilience

--- a/Confidence.tex
+++ b/Confidence.tex
@@ -27,7 +27,7 @@ Whatever.}{Danielle La Parte}{MA_DWH}{}
 \hugeQuote{NH_FAIL}{Failure connot cope with persistence.}{}{Napoleon Hill}{MAR_PERSIST}{}
 \hugeQuote{WS_FEAR}{Our doubts are traitors}{, and make us lose the good we might oft win be fearing to attempt.}{William Shakespear}{}{}
 
-\hugeQuote{RH}{You don't have to be the best}{ you just have to be harder to destory. You have to be relentless}{Ryan Holiday}{NH_FAIL}{}
+\hugeQuote{RH_DESTROY}{You don't have to be the best}{ you just have to be harder to destroy. You have to be relentless}{Ryan Holiday}{NH_FAIL}{}
 
 \hugeQuote{RG_DISPLAY}{You cannot display yourself too brazenly}{, yet you must get noticed. Create a distinctive (a subtly distinctive) style and image.}{Robert Greene}{}{}
 
