--- a/Generosity.tex
+++ b/Generosity.tex
@@ -29,7 +29,8 @@ Yet, I do not intend that to be the definition of me}{Michel De Montaigne}{HM_DW
 \hugeQuote{BT_GIVE}{Always give with remembering}{ and receive without forgetting}{Brian Tracy}{S_DO}{}
 
 
-\hugeQuote{SL_GIVE}{Forgiveness means a long memory of all the times when we wouldn't have gotten through life with someone cutting us some slack.}{ It is recognising that living with others is not possible without excusing errors}{via School of Life}{}{See the modern \href{http://bit.ly/1XoP0tE}{virtues} }
+\hugeQuote{SL_GIVE}{Forgiveness means a long memory of all the times when we wouldn't have gotten through life with someone cutting us some slack.}{ It is recognising that living with others is not possible without excusing errors}{School of Life}{}{See the modern virtues \llink{http://bit.ly/1XoP0tE}}
+%http://thephilosophersmail.com/wp-content/uploads/2014/04/Ten-Virtues.pdf
 
 \smallQuote{MA_GIVE}{You've given and they've received it. And yet, like an idiot, you keep holding out for more. To be credited with a good deed? To be repaid in kind? why?}{Marcus Aurelius}{HT_CREDIT}
 
