--- a/Gratitude.tex
+++ b/Gratitude.tex
@@ -20,15 +20,6 @@
 
 
 
-\HugeQuote{RG_WONDER}{The ability to express wonder and amazement}{ and seem like you mean it, is a rare a dying talent but one that is still greatly valued}{Robert Greene}{RWE_STARS}{}
-
-
-\HugeQuote{TBP_4IMM}{May all  beings have happiness and the causes of happiness}{
-
-May all sentient beings be free of suffering and the causes of suffering
-
-May all sentient beings not be separated from sorrowless bliss
-
-May all sentient beings abide in equanimity, free of bias, attachment and anger}{Traditional Buddhist Prayer}{}{The four immesurables.}
+\HugeQuote{RG_WONDER}{The ability to express wonder and amazement}{ and seem like you mean it, is a rare a dying talent but one that is still greatly valued.}{Robert Greene}{RWE_STARS}{}
 
 \HugeQuote{CP_SCAR}{It is so hard to foget pain}{ but it is harder to remember sweetness. There is no scar for happiness}{Chuck Palaniuk}{}{}
