--- a/Introduction.tex
+++ b/Introduction.tex
@@ -10,9 +10,9 @@ Even with our goal, we'll still fail. Badly. But to get us through the tough spo
 
 The hope here is that we can turn to this "manual" for help at times when we're losing our way, forgetting what's important to us and the promises we've made about the sort of person we want to become.
 
-The set of qualities we're looking to develop here are inspired in part by the Modern Virtues page from the School of Life 
-\llink{http://thephilosophersmail.com/wp-content/uploads/2014/04/Ten-Virtues.pdf}, the majority of content is helpful quotes and aphorisms. Anything useful you find in these pages will be directly attributable to them. 
+The set of qualities we're looking to develop here are inspired in part by the Modern Virtues page from the School of Life\llink{http://bit.ly/1XoP0tE}, the majority of content is helpful quotes and aphorisms picked up from books and the internet. Anything useful you find in these pages will be directly attributable to them. 
+%http://thephilosophersmail.com/wp-content/uploads/2014/04/Ten-Virtues.pdf
 
-Good luck, and live well.
+Good luck, and, as our trusted advisor Seneca would say, live well.
 
 \end{multicols}
