--- a/Resilience.tex
+++ b/Resilience.tex
@@ -1,5 +1,12 @@
 \input{ResilienceIntro.tex}
 
+\cleardoublepage
+
+\HugeQuote{JP_STAND}{Fall seven times}{, stand eight}{Japanese Proverb}{MA_PERSIST2}{}
+
+\cleartoleftpage
+
+\smallQuote{CD_PROMISE}{Promise yourself to be so strong that nothing can disturb your peace of mind}{Christian D'Larson}{}{}
 
 \smallQuote{FN_TIRED}{When we are tired we are attacked by ideas we conquered long ago.}{Friedrich Nietzche}{}
 
@@ -7,7 +14,7 @@
 
 \smallQuote{SP_FAT}{It's just fat and muscle}{}{}
 
-\newpage
+\cleardoublepage
 
 
 \hugeQuote{H_RAZOR}{Hanlon's Razor}{: \newline
@@ -16,7 +23,6 @@ Never attribute to malice that which can be adequately explained by incompetence
 
 \newpage
 
-\smallQuote{CD_PROMISE}{Promise yourself to be so strong that nothing can disturb your peace of mind}{Christian D'Larson}{}{}
 
 \smallQuote{RH_EFFORT}{You control the effort not the results}{Ryan Holiday}{}{}
 
@@ -50,7 +56,7 @@ Ta ouk eph'hemin}{Stoic phrase}{}{what is up to us, what is not up to us.}
 
 \cleardoublepage
 
-\hugeQuote{S_PROBLEMS}{Nothing either good nor bad}{ but thinking makes it so}{Shakespeare}{}{}
+\hugeQuote{WS_PROBLEMS}{Nothing either good nor bad}{ but thinking makes it so}{William Shakespeare}{}{}
 
 \hugeQuote{TNV_PROBLEMS}{Real difficulties can be overcome}{\newline 
 It's only the imaginary ones that are unconquerable}{Theodore N Vail}{UG_COUNT}{}
@@ -70,7 +76,9 @@ endure what we must}{Ryan Holiday}{}{}
 Not to trust prosperity.\newline \newline
 And always take note of Fortune's habit of behaving exactly as she pleases}{Seneca}{}{}
 
-\hugeQuote{JKZ_ENDURE}{You can't stop the waves}{ but you can learn how to surf}{Jon Kabat Zin}{H_CHANGE}{}
+\cleardoublepage
+
+\HugeQuote{JKZ_ENDURE}{You can't stop the waves}{ but you can learn how to surf}{Jon Kabat Zin}{H_CHANGE}{}
 
 \clearpage
 
@@ -112,7 +120,7 @@ Sometimes courage is the quiet voice at the end of the day whispering "I will tr
 \hugeQuote{MA_PERSIST2}{Disgraceful}{ for the soul to give up while the body is still going strong}{Marcus Aurelius}{}{}
 
 \cleardoublepage
-\HugeQuote{JP_STAND}{Fall seven times}{, stand eight}{Japanese Proverb}{MA_PERSIST2}{}
+
 
 
 \hugeQuote{MA_HARM1}{Choose not to be harmed}{ and you won't feel harmed\newline
@@ -170,7 +178,7 @@ That's all you need}{Marcus Aurelius}{}{}
 not places afording views over the sea}{Horace}{A_ALONE}{}
 
 \hugeQuote{GKN_WORK}{Successful people are not gifted}{; they just work hard, then succeed. \newline
-On purpose}{G. K. Nielson}{M_WORK}{}
+\emph{On purpose}}{G. K. Nielson}{M_WORK}{}
 
 
 
