--- a/ResilienceIntro.tex
+++ b/ResilienceIntro.tex
@@ -1,9 +1,15 @@
 \cleardoublepage
 \begin{multicols}{2}
 
-We can't have full control and so things won't always turn out as we'd hoped. Having the courage to pursue our goal in the face of set backs and 
+We can't have full control and so things won't always turn out as we'd hoped. Having the courage to pursue our goal in the face of unexpected changes of plan (cf. \ref{H_CHANGE}), times of poor judgement (cf. \ref{FN_TIRED}), and even after outright failures (cf. \ref{NT_FAIL}) will mean that we'll still make slow progress towards our aim of a better self. 
 
-We're also going to run into oposition as we make progress. Others will see our improvement and resent us (cf. \ref{TS_HHH}) for showing them in an unfavourable light. We just need to rise above that and remember what we're trying to acheive. 
+The challenges, of course, won't just come from us and our lapses in judgement or the fates changing their mind, others will see our improvement and resent us or even try to derail us (cf. \ref{S_BTR}) after they're revealed as lazy, cruel or arrogant. When that happens we need to remember that we were there not so long ago ourselves (cf. \ref{SL_GIVE}) but we need to keep focussed on what's truly important and what we're trying to achieve. Our route is hard enough without allowing other people to throw us off course (cf. \ref{MA_TC}).
+
+Picking ourselves up and dusting ourselves off needs to become second nature. We may be lucky enough to have support from others at times but we know we can't rely on that, we can only rely on what we control and that is nothing more than our response to what has happened.
+
+To reach our goals we don't need to be the best (cf. \ref{RH_DESTROY}), and in our case it doesn't really make sense to "be the best" as we'll always be able to improve in some way, but we do need to keep at it and no matter what happens acting as though we were already the better person we want to be (cf. \ref{MA_DWH}).
+
+No matter what's happened, no matter what they've said, no matter what they've done; it's up to us how we react, it's up to us what happens next.
 
 \end{multicols}
 \clearpage
