--- a/Patience.tex
+++ b/Patience.tex
@@ -1,7 +1,7 @@
 \input{PatienceIntro.tex}
 
-\smallQuote{ADM_CHARGE}{Ask yourself this question:\newline
-Am I in charge of this situation or is this situation in charge of me?}{Anthony De Mello}{}
+\HugeQuote{ADM_CHARGE}{Ask yourself this question:\newline
+Am I in charge of this situation or is this situation in charge of me?}{}{Anthony De Mello}{}
 
 \hugeQuote{ST_WAIT}{Do not make war}{ unless victory may be gained;\newline
 If there is a prospect of vicory move; \newline
@@ -9,18 +9,16 @@ If there is no prospect of victory do not move.}{Sun Tzu}{}{}
 
 \hugeQuote{RG_WAIT1}{Impatience}{: perhaps the single greatest pitfall}{Robert Greene}{}{}
 
-\hugeQuote{MA_GRIEF}{How much more damage grief and ager do}{ than the things that caused them}{Marcus Aurelius}{}{}
+\hugeQuote{MA_GRIEF}{How much more damage grief and ager do}{ than the things that caused them.}{Marcus Aurelius}{}{}
 
-
-\hugeQuote{UG_COUNT}{There are always more of them}{ before they are counted}{Ulysses S Grant}{RH_ENDURE}{}
+\hugeQuote{UG_COUNT}{There are always more of them}{ before they are counted.}{Ulysses S Grant}{RH_ENDURE}{}
 
 %TODO seneca at the door
-\hugeQuote{WG_JUDGE}{The senses don't decieve}{ judgement deceives}{Goethe}{}{}
+\hugeQuote{WG_JUDGE}{The senses don't decieve}{, judgement deceives.}{John Von Goethe}{}{}
 
 \HugeQuote{I_GOAL}{It is more important to know where you're going than to get there quickly}{}{Isocrates}{MA_GOAL}{}
 
-
-\smallQuote{PS_RAGE}{Patience Wounded too often becomes rage}{Publius Syrus}{}
+\smallQuote{PS_RAGE}{Patience Wounded too often becomes rage.}{Publius Syrus}{}
 
 \smallQuote{RG_WAIT2}{If you are unsure of a course of action do not attempt it. Your doubts and hestitation will infect your execution}{Robert Greene}{ST_WAIT}{}
 
