--- a/PatienceIntro.tex
+++ b/PatienceIntro.tex
@@ -1,5 +1,11 @@
 \cleardoublepage
 \begin{multicols}{2}
 
+We know how important action is, but acting rashly, without care and attention can do serious harm to ourselves and can undo the good progress we've made towards our aims.
+
+Patience can look like a lack of engagement or a lack of committment but there's often more harm done through an emotional reaction (cf. \ref{MA_GRIEF}) 
+
+At all times we need to maintain a level of control so that we can act correctly, we don't fly into a rage, we don't make snap judgements and we don't let ourselves be carried away by the crowd.
+
 \end{multicols}
 \clearpage
