--- a/definitions.tex
+++ b/definitions.tex
@@ -3,7 +3,6 @@
 	\refstepcounter{section}
 	\addcontentsline{toc}{section}{\protect\numberline{\thesection}}
 	
-	%\marginnote{\large{\thesection}}
 	\begin{tabularx}{\textwidth}{ lr}
   		\multicolumn{2}{p{1.0\textwidth}}{\label{#1}#2}
   		\tabularnewline \tabularnewline
@@ -23,8 +22,9 @@
 
 %TODO: refactor for consistency
 \newcommand{\HugeQuote}[6]{
+    \cleardoublepage
 	\vspace*{\fill}
-	\standardQuote{#1}{\huge{\thesection}: \huge{#2}\huge{#3}}{#4}{#5}{#6}
+	\standardQuote{#1}{\huge{\thesection:} \huge{#2}\huge{#3}}{#4}{#5}{#6}
 	\vspace*{\fill}
 	\newpage
 }
@@ -34,3 +34,8 @@
 }
 
 \newcommand{\llink}[1] {\footnote{\href{#1}{#1}}}
+
+\newcommand*\cleartoleftpage{%
+  \clearpage
+  \ifodd\value{page}\hbox{}\newpage\fi
+}
